# GameEngineFromScrath

./: CMakeLists.txt  README.md
Empty/: CMakeLists.txt
Framework/Common/: BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp
